# CppCore

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Readme.md  WORKSPACE
.github/: main.workflow
src/headers/: System.Cli.hpp  System.Collections.hpp  System.Environment.hpp  System.Event.hpp  System.Functional.hpp  System.Graphics.Colour.hpp  System.Graphics.Image.hpp  System.Graphics.ImageConverter.hpp  System.Graphics.PPMConverter.hpp  System.Graphics.TARGAConverter.hpp  System.Io.Logging.hpp  System.Io.Path.hpp  System.Math.Complex.hpp  System.Math.Matrix.hpp  System.Math.Vector.hpp  System.Math.hpp  System.Os.hpp  System.Physics.hpp  System.Text.Csv.hpp  System.Text.Json.hpp  System.Text.NameGenerator.hpp  System.Text.Parsing.hpp  System.Text.String.hpp  System.hpp
src/sources/: System.Cli.cpp  System.Collections.cpp  System.Environment.cpp  System.Event.cpp  System.Functional.cpp  System.Graphics.Colour.cpp  System.Graphics.Image.cpp  System.Graphics.ImageConverter.cpp  System.Graphics.PPMConverter.cpp  System.Graphics.TARGAConverter.cpp  System.Io.Logging.cpp  System.Io.Path.cpp  System.Math.Complex.cpp  System.Math.Matrix.cpp  System.Math.Vector.cpp  System.Math.cpp  System.Os.cpp  System.Physics.cpp  System.Text.Csv.cpp  System.Text.Json.cpp  System.Text.NameGenerator.cpp  System.Text.Parsing.cpp  System.Text.String.cpp  System.cpp
test/: all.cpp
test/cases/: Tests.System.Io.Path.hpp  Tests.System.Math.hpp  Tests.System.Text.Json.hpp  Tests.System.Text.Parsing.hpp  Tests.System.Text.String.hpp
